--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <a class="nav-link" href="#titulo">Features</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
+                        <a class="nav-link" href="#">Pricing2</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Disabled</a>
